--- a/search.html
+++ b/search.html
@@ -113,7 +113,7 @@
 </body>
     
 <!--Footer-->
-<footer id="footer">
+<footer id="footer" class="search-footer">
 
     <div class="grid-system">
 
